--- a/index.html
+++ b/index.html
@@ -196,9 +196,13 @@
     <div class="row">
       <div class="formula-item">
         <div class="formula-item__icon">
-          <div class="formula-item-popup formula-item-popup-05"><p>Стоимость <strong>фиксируется</strong> в договоре и
-            <strong>не меняется</strong> в процессе работы. Мы предлагаем <strong>наличный и безналичный
-            расчет,</strong> оплату на карту, а также беспроцентную рассрочку.</p>
+          <div class="formula-item-popup formula-item-popup-05">
+            <p>Стоимость 
+              <strong>фиксируется</strong> в договоре и
+            <strong>не меняется</strong> в процессе работы. Мы предлагаем 
+            <strong>наличный и безналичный
+            расчет,</strong> оплату на карту, а также беспроцентную рассрочку.
+          </p>
           </div>
           <div class="formula-item__icon-inner"></div>
           <span class="formula-item__icon-inner-text">05</span></div>
@@ -230,8 +234,8 @@
       <div class="formula-slider">
         <div class="formula-item formula-slider__slide">
           <div class="formula-item__icon">
-            <div class="formula-item-popup formula-item-popup-01">Работы ведутся <strong>точно</strong> по графику со
-              строгим <strong>cоблюдением</strong> сроков ремонта, <strong>указанных</strong> в договоре.
+            <div class="formula-item-popup formula-item-popup-01"><p>Работы ведутся <strong>точно</strong> по графику со
+              строгим <strong>cоблюдением</strong> сроков ремонта, <strong>указанных</strong> в договоре.</p>
             </div>
             <div class="formula-item__icon-inner">01</div>
           </div>
@@ -241,7 +245,7 @@
           <div class="formula-item__icon">
             <div class="formula-item-popup formula-item-popup-02"><p>Наш <strong>профессиональный</strong> опыт реализации
               объектов и задач <strong>различного</strong> назначения и масштаба. Мы очень <strong>гибки</strong> и
-              <strong>лояльны</strong> к нам клиентам.</p>>
+              <strong>лояльны</strong> к нам клиентам.</p>
             </div>
             <div class="formula-item__icon-inner">02</div>
           </div>
@@ -268,8 +272,8 @@
         </div><!-- formula-item -->
         <div class="formula-item formula-slider__slide">
           <div class="formula-item__icon">
-            <div class="formula-item-popup formula-item-popup-05"><p><p>Стоимость <strong>фиксируется</strong> в договоре и
-              <strong>не меняется</strong> в процессе работы.</p>Мы предлагаем <strong>наличный и безналичный
+            <div class="formula-item-popup formula-item-popup-05"><p>Стоимость <strong>фиксируется</strong> в договоре и
+              <strong>не меняется</strong> в процессе работы.Мы предлагаем <strong>наличный и безналичный
               расчет,</strong> оплату на карту, а также беспроцентную рассрочку.</p>
             </div>
             <div class="formula-item__icon-inner">05</div>
