--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
       <div class="formula-slider">
         <div class="formula-item formula-slider__slide">
           <div class="formula-item__icon">
-            <div class="formula-item-popup formula-item-popup-01">Работы ведутся <strong>точно</strong> по графику со
-              строгим <strong>cоблюдением</strong> сроков ремонта, <strong>указанных</strong> в договоре.
+            <div class="formula-item-popup formula-item-popup-01"><p>Работы ведутся <strong>точно</strong> по графику со
+              строгим <strong>cоблюдением</strong> сроков ремонта, <strong>указанных</strong> в договоре.</p>
             </div>
             <div class="formula-item__icon-inner">01</div>
           </div>
@@ -268,8 +268,8 @@
         </div><!-- formula-item -->
         <div class="formula-item formula-slider__slide">
           <div class="formula-item__icon">
-            <div class="formula-item-popup formula-item-popup-05"><p><p>Стоимость <strong>фиксируется</strong> в договоре и
-              <strong>не меняется</strong> в процессе работы.</p>Мы предлагаем <strong>наличный и безналичный
+            <div class="formula-item-popup formula-item-popup-05"><p>Стоимость <strong>фиксируется</strong> в договоре и
+              <strong>не меняется</strong> в процессе работы. Мы предлагаем <strong>наличный и безналичный
               расчет,</strong> оплату на карту, а также беспроцентную рассрочку.</p>
             </div>
             <div class="formula-item__icon-inner">05</div>
