--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           <div class="formula-item__icon">
             <div class="formula-item-popup formula-item-popup-02"><p>Наш <strong>профессиональный</strong> опыт реализации
               объектов и задач <strong>различного</strong> назначения и масштаба. Мы очень <strong>гибки</strong> и
-              <strong>лояльны</strong> к нам клиентам.</p>>
+              <strong>лояльны</strong> к нам клиентам.</p>
             </div>
             <div class="formula-item__icon-inner">02</div>
           </div>
@@ -251,7 +251,7 @@
           <div class="formula-item__icon">
             <div class="formula-item-popup formula-item-popup-03"><p>Перед началом работ мы <strong>грамотно</strong>
               прорабатываем, распределяем и просчитываем весь проект на основе ваших пожеланий и прочный, таким образом
-              мы верно управляем вашим <strong>бюджетом.</strong></p>></div>
+              мы верно управляем вашим <strong>бюджетом.</strong></p></div>
             <div class="formula-item__icon-inner">03</div>
           </div>
           <div class="formula-item__descr">Разумное распределение бюджета</div>
@@ -260,7 +260,7 @@
           <div class="formula-item__icon">
             <div class="formula-item-popup formula-item-popup-04"><p>Стоимость услуг, <strong>зафиксированная</strong> в
               договоре, <strong>не меняется</strong> в процессе выполнения работ. Вы можете быть
-              <strong>уверены</strong> в изначальной цене!</p>>
+              <strong>уверены</strong> в изначальной цене!</p>
             </div>
             <div class="formula-item__icon-inner">04</div>
           </div>
